# bq-guard-vscode

./: .gitignore  README.md  pyproject.toml
bq_guard/: __init__.py  app_model.py  cache.py  cli.py  config.py  gcloud.py  history.py
bq_guard/bq/: __init__.py  client.py  jobs.py  metadata.py
bq_guard/policy/: __init__.py  checks.py  partition.py  sql_sanitize.py  types.py
extension/: package.json
extension/src/: commands.ts  diagnostics.ts  extension.ts  pythonBridge.ts  state.ts
extension/src/webview/: panel.ts
extension/src/webview/assets/: index.html  main.js  styles.css
tests/: test_partition_enforcement.py  test_policy_checks.py
